--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,16 @@
 
 /* Your CSS Code here. */
+header{
+	text-align:center;
+	font-size:20px;
+	margin-bottom:4px;
+}
+
+nav{
+	display:flex;
+	text-align:center;
+	justify-content:center;
+	gap:15px;
+	
+
+}
